Imlib2-Perl

0.01  Tue Sep 26 16:51:55 2000
	- Initial checkin, look at merge.pl for an example. Not everything works.
	
